--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-base-62 = "0.1.1"
-scrypt = "0.5.0"
-sodiumoxide = "0.2.6"
-structopt = "0.3.20" 
+base64 = "^0.13"
+scrypt = "^0.5"
+rust-crypto = "^0.2"
+structopt = "^0.3" 
