--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,9 @@ version = "0.1.0"
 authors = ["cgaebel"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 base64 = "^0.13"
 scrypt = "^0.5"
 rust-crypto = "^0.2"
 structopt = "^0.3" 
+serde_json = "^1.0"
