--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,6 @@ scrypt = "^0.5"
 rust-crypto = "^0.2"
 structopt = "^0.3" 
 serde_json = "^1.0"
+anyhow = "^1.0"
+mktemp = "^0.4"
+subprocess = "^0.2"
