--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,10 @@ anyhow = "^1.0"
 base64 = "^0.13"
 mktemp = "^0.4"
 serde_json = "^1.0"
-structopt = "^0.3" 
 os_type = "^2.2"
 rpassword = "^5.0"
 rust-crypto = "^0.2"
-scrypt = "^0.5"
 subprocess = "^0.2"
+scrypt = "^0.5"
+structopt = "^0.3"
+rand = "^0.7"
