--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "lifecrypt"
 version = "0.1.0"
-authors = ["cgaebel"]
+authors = ["Clark Gaebel", "Elijah Andrews"]
 edition = "2018"
 
 [dependencies]
