--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 anyhow = "^1.0"
 base64 = "^0.13"
 mktemp = "^0.4"
+serde = { version = "^1.0", features = ["derive"] }
 serde_json = "^1.0"
 os_type = "^2.2"
 rpassword = "^5.0"
